--- a/css/theme.css
+++ b/css/theme.css
@@ -50,16 +50,16 @@ body {
   word-wrap: break-word; }
 
 .reveal h1 {
-  font-size: 2.5em; }
+  font-size: 2.4em; }
 
 .reveal h2 {
-  font-size: 1.6em; }
+  font-size: 1.5em; }
 
 .reveal h3 {
-  font-size: 1.3em; }
+  font-size: 1.2em; }
 
 .reveal h4 {
-  font-size: 1em; }
+  font-size: 0.9em; }
 
 .reveal h1 {
   text-shadow: none; }
@@ -284,3 +284,27 @@ body {
   -webkit-transition: width 800ms cubic-bezier(0.26, 0.86, 0.44, 0.985);
   -moz-transition: width 800ms cubic-bezier(0.26, 0.86, 0.44, 0.985);
   transition: width 800ms cubic-bezier(0.26, 0.86, 0.44, 0.985); }
+
+.MJXc-TeX-main-R {
+  margin-left: 10px !important;
+  margin-right: 10px !important; }
+
+.MJXc-TeX-ams-R {
+  font-family: MJXc-TeX-ams-R,MJXc-TeX-ams-Rw !important; }
+
+.reveal ul {
+  display: block; }
+
+.reveal pre code {
+  margin-top: 10px;
+  max-height: 500px !important; }
+
+ul li {
+  margin-bottom: 30px !important; }
+
+ul.list-unstyled {
+  list-style: none;
+  padding: 0; }
+
+#MathJax-Span-44 {
+  margin-right: 10px; }
