--- a/templates/_index.html
+++ b/templates/_index.html
@@ -13,7 +13,10 @@
 
         <link rel="stylesheet" href="bower_components/reveal.js/css/reveal.css">
 
+
+        <link rel="stylesheet" href="bower_components/reveal.js/lib/css/zenburn.css">
         <link rel="stylesheet" href="css/theme.css" id="theme">
+
 
         <!-- Printing and PDF exports -->
         <script>
