last minute changes + speaker notes

--- a/templates/_index.html
+++ b/templates/_index.html
@@ -65,7 +65,7 @@
             progress: true,
             history: true,
             center: true,
-              showNotes: true,
+              showNotes: false,
 
             transition: 'slide', // none/fade/slide/convex/concave/zoom
 
