--- a/css/source/theme.scss
+++ b/css/source/theme.scss
@@ -105,3 +105,11 @@ ul.space-list-items {
 		margin: 0;
 	}
 }
+.centerlist {
+	list-style: none !important;
+	li {
+		text-align: center;
+		margin-bottom: 30px;
+	}
+
+}
