--- a/css/theme.css
+++ b/css/theme.css
@@ -318,3 +318,9 @@ ul.space-list-items li {
 
 .only-header h1, .only-header h2 {
   margin: 0; }
+
+.centerlist {
+  list-style: none !important; }
+  .centerlist li {
+    text-align: center;
+    margin-bottom: 30px; }
